overflow fix

--- a/source/sass/blocks/booking.scss
+++ b/source/sass/blocks/booking.scss
@@ -112,7 +112,7 @@
   line-height: 150%;
   margin-top: auto;
   min-height: 43px;
-  padding: 0;
+  padding: 10px;
   width: 100%;
 
   @include default-states($color-alice-blue);
