--- a/source/sass/blocks/cruises.scss
+++ b/source/sass/blocks/cruises.scss
@@ -180,6 +180,7 @@
   line-height: 150%;
   margin-top: auto;
   min-height: 40px;
+  padding: 10px;
   width: 100%;
 
   @include default-states($color-alice-blue);
