--- a/source/sass/blocks/socials.scss
+++ b/source/sass/blocks/socials.scss
@@ -5,23 +5,25 @@
   flex-wrap: wrap;
   gap: 20px;
   height: 100%;
-  justify-content: center;
+  justify-content: flex-end;
   list-style: none;
   margin: 0;
   margin-top: 4px;
-  max-width: 280px;
   padding: 0;
+  width: 250px;
 
   @include vp-1023 {
     gap: 12px;
     margin: 0;
     margin-right: -4px;
+    width: 145px;
   }
 
   @include vp-767 {
+    justify-content: flex-start;
     margin-left: -8px;
     margin-right: 0;
-    max-width: 100%;
+    width: 100%;
   }
 }
 
